--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
@@ -20,6 +22,9 @@
     "@nx/js": "20.5.0",
     "@nx/next": "20.5.0",
     "@nx/playwright": "20.5.0",
+    "@nx/react": "20.5.0",
+    "@nx/vite": "20.5.0",
+    "@nx/web": "20.5.0",
     "@nx/workspace": "20.5.0",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
@@ -31,6 +36,9 @@
     "@types/node": "18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
     "eslint-config-next": "14.2.16",
@@ -42,6 +50,8 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "20.5.0",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
@@ -49,6 +59,8 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.0",
+    "vite": "^6.0.0",
+    "vitest": "^3.0.0"
   }
 }
