--- a/apps/demo-app-e2e/project.json
+++ b/apps/demo-app-e2e/project.json
@@ -1,10 +1,10 @@
 {
-  "name": "nx-demo-multi-app-e2e",
+  "name": "demo-app-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/nx-demo-multi-app-e2e/src",
+  "sourceRoot": "apps/demo-app-e2e/src",
   "tags": [],
   "implicitDependencies": ["demo-app"],
-  "// targets": "to see all targets run: nx show project nx-demo-multi-app-e2e --web",
+  "// targets": "to see all targets run: nx show project demo-app-e2e --web",
   "targets": {}
 }
