--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@nx-demo-multi-app/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "lint": "nx run-many --target=lint",
+    "test": "nx run-many --target=test"
+  },
   "private": true,
   "dependencies": {
     "next": "~15.1.4",
