--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nx/workspace": "20.5.0",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
