--- a/nx.json
+++ b/nx.json
@@ -86,5 +86,10 @@
         "unitTestRunner": "vitest"
       }
     }
+  },
+  "release": {
+    "version": {
+      "preVersionCommand": "npx nx run-many -t build"
+    }
   }
 }
