--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "next": "~15.1.4",
     "react": "19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
@@ -61,14 +63,19 @@
     "jsdom": "~22.1.0",
     "nx": "20.5.0",
     "prettier": "^2.6.2",
-    "sass": "1.62.1",
+    "sass": "^1.62.1",
     "storybook": "^8.4.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
+    "verdaccio": "^6.0.5",
     "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
     "vitest": "^3.0.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
