--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@nx-demo-multi-app/Button": ["libs/shared/ui/button/src/index.ts"]
+      "@nx-demo-multi-app/Button": ["libs/shared/ui/button/src/index.ts"],
+      "@nx-demo-multi-app/shared-styles": [
+        "libs/shared/ui/shared-styles/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
