--- a/storybook/project.json
+++ b/storybook/project.json
@@ -1,7 +1,7 @@
 {
   "name": "storybook",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "storybook/src",
+  "sourceRoot": "storybook",
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project storybook --web",
